--- a/.github/workflows/cometbft.yaml
+++ b/.github/workflows/cometbft.yaml
@@ -16,6 +16,15 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
+
+      - name: Check if Docker image already exists
+        id: check-image
+        run: |
+          if docker manifest inspect ghcr.io/${{ github.repository }}/cometbft:${{ env.COMETBFT_GIT_TAG }} > /dev/null 2>&1; then
+            echo "Image with tag ${{ env.COMETBFT_GIT_TAG }} already exists, skipping job."
+            exit 0
+          fi
+
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
       - uses: docker/login-action@v3
@@ -23,18 +32,7 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Check if Docker image already exists
-        id: check-image
-        run: |
-          if docker manifest inspect ghcr.io/${{ github.repository }}/cometbft:${{ env.COMETBFT_GIT_TAG }} > /dev/null 2>&1; then
-            echo "Image with tag ${{ env.COMETBFT_GIT_TAG }} already exists, skipping build."
-            echo "skip_build=true" >> $GITHUB_OUTPUT
-          else
-            echo "Image does not exist, proceeding with build."
-            echo "skip_build=false" >> $GITHUB_OUTPUT
-          fi
       - name: Build and push Docker image
-        if: steps.check-image.outputs.skip_build == 'false'
         uses: docker/build-push-action@v5
         with:
           context: ./docker/cometbft
