--- a/networks/localdango/docker-compose.yml
+++ b/networks/localdango/docker-compose.yml
@@ -22,9 +22,9 @@ services:
     ports:
       - 127.0.0.1:8080:8080
     volumes:
-      - ./configs/dango/config:/root/.dango/config
-      - ./data/dango/data:/root/.dango/data
-      - ./data/dango/indexer:/root/.dango/indexer
+      - ./configs/dango/config:/home/dango/.dango/config
+      - ./data/dango/data:/home/dango/.dango/data
+      - ./data/dango/indexer:/home/dango/.dango/indexer
     environment:
       - DB_HOST=db
       - DB_PORT=5432
@@ -40,6 +40,6 @@ services:
     ports:
       - 127.0.0.1:26657:26657
     volumes:
-      - ./configs/cometbft/config:/root/.cometbft/config
-      - ./data/cometbft/data:/root/.cometbft/data
+      - ./configs/cometbft/config:/home/cometbft/.cometbft/config
+      - ./data/cometbft/data:/home/cometbft/.cometbft/data
     tty: true
