Add dozzle to view docker logs

--- a/deploy/justfile
+++ b/deploy/justfile
@@ -25,6 +25,9 @@ install-runners:
 deploy-bots:
   ansible-playbook bots.yml
 
+deploy-dozzle:
+  ansible-playbook dozzle.yml
+
 cold-deploy-dango:
   ansible-playbook dango.yml
 
