Fix block compression

--- a/indexer/sql/Cargo.toml
+++ b/indexer/sql/Cargo.toml
@@ -26,7 +26,7 @@ borsh                 = { workspace = true }
 futures               = { workspace = true }
 grug-app              = { workspace = true }
 grug-types            = { workspace = true, features = ["sea-orm"] }
-indexer-disk-saver    = { workspace = true }
+indexer-disk-saver    = { workspace = true, features = ["tracing"] }
 indexer-sql-migration = { workspace = true }
 itertools             = { workspace = true }
 sea-orm               = { workspace = true }
