--- a/indexer/disk-saver/Cargo.toml
+++ b/indexer/disk-saver/Cargo.toml
@@ -13,7 +13,7 @@ version       = { workspace = true }
 path = "src/lib.rs"
 
 [features]
-tracing = ["dep:tracing"]
+tracing = ["dep:tracing", "grug-app/tracing"]
 
 [dependencies]
 anyhow                = { workspace = true }
@@ -35,5 +35,6 @@ uuid                  = { workspace = true }
 
 [dev-dependencies]
 assertor           = { workspace = true }
+grug               = { workspace = true }
 tracing            = { workspace = true }
 tracing-subscriber = { workspace = true }
