--- a/indexer/testing/Cargo.toml
+++ b/indexer/testing/Cargo.toml
@@ -17,7 +17,7 @@ grug-db-memory = { workspace = true }
 grug-testing   = { workspace = true }
 grug-types     = { workspace = true }
 grug-vm-rust   = { workspace = true }
-indexer-httpd  = { workspace = true, features = ["testing"] }
+indexer-httpd  = { workspace = true, features = ["testing", "tracing"] }
 indexer-sql    = { workspace = true, features = ["async-graphql", "testing", "tracing"] }
 sea-orm        = { workspace = true }
 serde          = { workspace = true }
